test/fails/bad_types/bad_assign2.lgl
void main() {
    a->vec2 m = [[1., 2.], [2., 1.]];
}